2003-01-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libop++/op_print_event.cpp: no event,nor unit mask for CPU_TIMER_INT,
	  problem reported by Ka Fai Lu.

2003-01-12  John Levon  <levon@movementarian.org>

	From Graydon Hoare

	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: add P4 HT

	* libop/op_events.c: tag P4 HT events

2003-01-11   Randolph Chung  <tausq@debian.org>

	* daemon/oprofiled.c: fix ELF sniff

2003-01-11  John Levon  <levon@movementarian.org>

	* daemon/opd_image.c: bail out immediately on dcookie
	  lookup failure.

2003-01-10  John Levon  <levon@movementarian.org>

	* daemon/opd_cookie.h: insulate against missing arch support
	  for sys_lookup_dcookie

	* daemon/opd_image.c: use the above

2003-01-10  John Levon  <levon@movementarian.org>

	* daemon/opd_image.c:
	* daemon/oprofiled.c: move complete_dump to a better place

2003-01-10  John Levon  <levon@movementarian.org>

	* libutil/op_types.h: add cookie_t and vma_t

	* daemon/opd_image.c:
	* daemon/opd_image.h:
	* daemon/opd_kernel.c:
	* daemon/opd_kernel.h: use above types, and kernel_pointer_size

	* daemon/oprofiled.c: sniff /proc/kcore for kernel_pointer_size

2003-01-10  Philippe Elie  <phil.el@wanadoo.fr>

	* libopt++/popt_options.cpp:
	* libopt++/popt_options.h: work-around to support both gcc new parser
	  and gcc 2.95

2003-01-08  John Levon  <levon@movementarian.org>

	* libop/op_type.cpp: support for ascii-string cpu types

2003-01-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h:
	* pp/oprofpp.cpp: more use of bfd_vma

2003-01-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/Makefile.am: fix include dir
	* libdb/db_test.c: don't assume than sizeof(struct opd_header) == 128

2003-01-06  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.h: fix for 64 bits.

2003-01-06  Philippe Elie  <phil.el@wanadoo.fr>

	* libabi/abi.cpp:
	* libabi/op_import.cpp: broken by my last change in libdb.

2003-01-06  Philippe Elie  <phil.el@wanadoo.fr>
