@@ -343,7 +343,8 @@ static struct op_unit_mask um_branch_type =
 #define OP_IA_ALL	(OP_PII_PIII | OP_PPRO)
 
 #define OP_P4           (1 << CPU_P4)
-#define OP_P4_HT2       ((1 << CPU_P4) | (1 << CPU_P4_HT2))
+#define OP_P4_HT2       (1 << CPU_P4_HT2)
+#define OP_P4_ALL       (OP_P4 | OP_P4_HT2)
 
 #define OP_IA64		(1 << CPU_IA64)
 #define OP_IA64_1	(1 << CPU_IA64_1)
@@ -618,41 +619,41 @@ struct op_event const op_events[] = {
     "Number of taken hardware interrupts", 10,},
 
   /* pentium 4 events */
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x01, &um_branch_retired, "BRANCH_RETIRED", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x01, &um_branch_retired, "BRANCH_RETIRED", 
     "retired branches", 3000},
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x02, &um_mispred_branch_retired, "MISPRED_BRANCH_RETIRED", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x02, &um_mispred_branch_retired, "MISPRED_BRANCH_RETIRED", 
     "retired mispredicted branches", 3000},
   { CTR_MS_ALL,    OP_P4, 0x03, &um_tc_deliver_mode, "TC_DELIVER_MODE", 
     "duration (in clock cycles) in the trace cache and decode engine", 3000},  
-  { CTR_BPU_ALL,   OP_P4_HT2, 0x04, &um_bpu_fetch_request, "BPU_FETCH_REQUEST", 
+  { CTR_BPU_ALL,   OP_P4_ALL, 0x04, &um_bpu_fetch_request, "BPU_FETCH_REQUEST", 
     "instruction fetch requests from the branch predict unit", 3000},
-  { CTR_BPU_ALL,   OP_P4_HT2, 0x05, &um_itlb_reference, "ITLB_REFERENCE", 
+  { CTR_BPU_ALL,   OP_P4_ALL, 0x05, &um_itlb_reference, "ITLB_REFERENCE", 
     "translations using the instruction translation lookaside buffer", 3000},
-  { CTR_FLAME_ALL, OP_P4_HT2, 0x06, &um_memory_cancel, "MEMORY_CANCEL", 
+  { CTR_FLAME_ALL, OP_P4_ALL, 0x06, &um_memory_cancel, "MEMORY_CANCEL", 
     "cancelled requesets in data cache address control unit", 3000},
-  { CTR_FLAME_ALL, OP_P4_HT2, 0x07, &um_memory_complete, "MEMORY_COMPLETE", 
+  { CTR_FLAME_ALL, OP_P4_ALL, 0x07, &um_memory_complete, "MEMORY_COMPLETE", 
     "completed load split, store split, uncacheable split, uncacheable load", 3000},
-  { CTR_FLAME_ALL, OP_P4_HT2, 0x08, &um_load_port_replay, "LOAD_PORT_REPLAY", 
+  { CTR_FLAME_ALL, OP_P4_ALL, 0x08, &um_load_port_replay, "LOAD_PORT_REPLAY", 
     "replayed events at the load port", 3000},
-  { CTR_FLAME_ALL, OP_P4_HT2, 0x09, &um_store_port_replay, "STORE_PORT_REPLAY", 
+  { CTR_FLAME_ALL, OP_P4_ALL, 0x09, &um_store_port_replay, "STORE_PORT_REPLAY", 
     "replayed events at the store port", 3000},
-  { CTR_BPU_ALL,   OP_P4_HT2, 0x0a, &um_mob_load_replay, "MOB_LOAD_REPLAY", 
+  { CTR_BPU_ALL,   OP_P4_ALL, 0x0a, &um_mob_load_replay, "MOB_LOAD_REPLAY", 
     "replayed loads from the memory order buffer", 3000},
   { CTR_BPU_ALL,   OP_P4, 0x0b, &um_page_walk_type, "PAGE_WALK_TYPE", 
     "page walks by the page miss handler", 3000},
-  { CTR_BPU_ALL,   OP_P4_HT2, 0x0c, &um_bsq_cache_reference, "BSQ_CACHE_REFERENCE", 
+  { CTR_BPU_ALL,   OP_P4_ALL, 0x0c, &um_bsq_cache_reference, "BSQ_CACHE_REFERENCE", 
     "cache references seen by the bus unit", 3000},
-  { CTR_BPU_0,     OP_P4_HT2, 0x0d, &um_ioq, "IOQ_ALLOCATION", 
+  { CTR_BPU_0,     OP_P4_ALL, 0x0d, &um_ioq, "IOQ_ALLOCATION", 
     "bus transactions", 3000},
-  { CTR_BPU_2,     OP_P4_HT2, 0x0e, &um_ioq, "IOQ_ACTIVE_ENTRIES", 
+  { CTR_BPU_2,     OP_P4_ALL, 0x0e, &um_ioq, "IOQ_ACTIVE_ENTRIES", 
     "number of entries in the IOQ which are active", 3000},
   { CTR_BPU_ALL,   OP_P4, 0x0f, &um_fsb_data_activity, "FSB_DATA_ACTIVITY", 
     "DRDY or DBSY events on the front side bus", 3000},
-  { CTR_BPU_0,     OP_P4_HT2, 0x10, &um_bsq, "BSQ_ALLOCATION", 
+  { CTR_BPU_0,     OP_P4_ALL, 0x10, &um_bsq, "BSQ_ALLOCATION", 
     "allocations in the bus sequence unit", 3000},
   { CTR_BPU_2,     OP_P4, 0x11, &um_bsq, "BSQ_ACTIVE_ENTRIES", 
     "number of entries in the bus sequence unit which are active", 3000},
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x12, &um_x87_assist, "X87_ASSIST", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x12, &um_x87_assist, "X87_ASSIST", 
     "retired x87 instructions which required special handling", 3000},
   { CTR_FLAME_ALL, OP_P4, 0x13, &um_flame_uop, "SSE_INPUT_ASSIST", 
     "input assists requested for SSE or SSE2 operands", 3000},
@@ -672,29 +673,29 @@ struct op_event const op_events[] = {
     "x87 floating point uops", 3000},
   { CTR_FLAME_ALL, OP_P4, 0x1b, &um_x87_simd_moves_uop, "X87_SIMD_MOVES_UOP", 
     "x87 FPU, MMX, SSE, or SSE2 loads, stores and reg-to-reg moves", 3000},
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x1c, &um_machine_clear, "MACHINE_CLEAR", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x1c, &um_machine_clear, "MACHINE_CLEAR", 
     "cycles with entire machine pipeline cleared", 3000},
-  { CTR_BPU_ALL,   OP_P4_HT2, 0x1d, &um_global_power_events, "GLOBAL_POWER_EVENTS", 
+  { CTR_BPU_ALL,   OP_P4_ALL, 0x1d, &um_global_power_events, "GLOBAL_POWER_EVENTS", 
     "time during which processor is not stopped", 3000},
-  { CTR_MS_ALL,    OP_P4_HT2, 0x1e, &um_tc_ms_xfer, "TC_MS_XFER", 
+  { CTR_MS_ALL,    OP_P4_ALL, 0x1e, &um_tc_ms_xfer, "TC_MS_XFER", 
     "number of times uops deliver changed from TC to MS ROM", 3000},
-  { CTR_MS_ALL,    OP_P4_HT2, 0x1f, &um_uop_queue_writes, "UOP_QUEUE_WRITES", 
+  { CTR_MS_ALL,    OP_P4_ALL, 0x1f, &um_uop_queue_writes, "UOP_QUEUE_WRITES", 
     "number of valid uops written to the uop queue", 3000},
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x20, &um_front_end_event, "FRONT_END_EVENT", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x20, &um_front_end_event, "FRONT_END_EVENT", 
     "retired uops, tagged with front-end tagging", 3000},
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x21, &um_execution_event, "EXECUTION_EVENT", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x21, &um_execution_event, "EXECUTION_EVENT", 
     "retired uops, tagged with execution tagging", 3000},
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x22, &um_replay_event, "REPLAY_EVENT", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x22, &um_replay_event, "REPLAY_EVENT", 
     "retired uops, tagged with replay tagging", 3000},
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x23, &um_instr_retired, "INSTR_RETIRED", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x23, &um_instr_retired, "INSTR_RETIRED", 
     "retired instructions", 3000},
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x24, &um_uops_retired, "UOPS_RETIRED", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x24, &um_uops_retired, "UOPS_RETIRED", 
     "retired uops", 3000},
-  { CTR_IQ_ALL,    OP_P4_HT2, 0x25, &um_uop_type, "UOP_TYPE", 
+  { CTR_IQ_ALL,    OP_P4_ALL, 0x25, &um_uop_type, "UOP_TYPE", 
     "type of uop tagged by front-end tagging", 3000},
-  { CTR_MS_ALL,    OP_P4_HT2, 0x26, &um_branch_type, "RETIRED_MISPRED_BRANCH_TYPE", 
+  { CTR_MS_ALL,    OP_P4_ALL, 0x26, &um_branch_type, "RETIRED_MISPRED_BRANCH_TYPE", 
     "retired mispredicted branched, selected by type", 3000},
-  { CTR_MS_ALL,    OP_P4_HT2, 0x27, &um_branch_type, "RETIRED_BRANCH_TYPE", 
+  { CTR_MS_ALL,    OP_P4_ALL, 0x27, &um_branch_type, "RETIRED_BRANCH_TYPE", 
     "retired branches, selected by type", 3000},
 
   /* other CPUs */
