@@ -1,5 +1,9 @@
 2003-01-12  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libop/op_events.c: rename OP_P4_HT2 to OP_P4_ALL
+
+2003-01-12  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libop++/op_print_event.cpp: no event,nor unit mask for CPU_TIMER_INT,
 	  problem reported by Ka Fai Lu.
 
